# geocode

./: .pdm-python  README.md  pyproject.toml
shapefile/: pontos.dbf  pontos.geojson  pontos.shp  pontos.shx
src/google_geocoding/: csv_to_shp.py  geocode.py
tests/: requests_test.ipynb  teste.py
xlsx/: output.csv  output.xlsx
