[project]
name = "google_geocoding"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "anderson stolfi", email = "anderson@giscaruso.com.br"},
]
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.2.2",
    "ipykernel>=6.29.4",
    "openpyxl>=3.1.2",
    "geopandas>=0.14.4",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
